update sms2i , and make SQLServeur 2